--- a/index.html
+++ b/index.html
@@ -16,23 +16,36 @@
         <div id="left-top-overlay">
           <div id="profile">
             <div id="me"></div>
-            <h1 id="name">Dean Meier</h1>
-            <p id="job">Web Developer</p>
+            <h1 id="name"><span>Dean</span> Meier</h1>
+            <p id="job"><span>Web</span> Developer</p>
+            <p id="email"><span>Email:</span> deanfrederickmeier@gmail.com</p>
+            <p id="about">
+              I've been developing websites and web-based applications for 4 years now. My skill set includes HTML5, CSS3, JavaScript, JQuery, a bit of PHP and Ruby on Rails. I have experience with and certifications for both Photoshop and Illustrator. I use them to design my layouts and sometimes even create my own assets.
+            </p>
           </div>
         </div>
       </section>
-      <section id="left-bottom"></section>
     </section>
     <section id="right">
-      <section id="top"></section>
+      <section id="top">
+        <div class="overlay"></div>
+
+        <div id="projects-title-container-3"></div>
+        <div id="projects-title-container-2"></div>
+        <div id="projects-title-container-1"></div>
+
+        <div id="projects-title"><p>Projects</p></div>
+
+      </section>
 
       <section id="bottom">
-        <section id="bottom-left">
+        <div class="overlay"></div>
 
-        </section>
-        <section id="bottom-right">
+        <div id="blog-title-container-3"></div>
+        <div id="blog-title-container-2"></div>
+        <div id="blog-title-container-1"></div>
 
-        </section>
+        <div id="blog-title"><p>Blog</p></div>
       </section>
     </section>
   </section>
